--- a/src/main/webapp/static/css/styles.css
+++ b/src/main/webapp/static/css/styles.css
@@ -863,6 +863,13 @@ h1.page-header {
 }
 
 
+/*
+ * define by Xu Yi
+*/
+
+.panel-body li{
+	background: #eeeeee;
+}
 .page-turn{
 	position: relative;
 	margin:0 auto;
